Таблица детализации заказов. Расчет выполнения плана

--- a/templates/asuzr/attend_order.html
+++ b/templates/asuzr/attend_order.html
@@ -1,2 +1,8 @@
-{% include 'asuzr/attendance.html' %}
-{% include 'asuzr/orders.html' %}
+<table WIDTH="100%">
+  <TR VALIGN=top>
+    <TD WIDTH="40%">{% include 'asuzr/attendance.html' %}</TD>
+    <TD WIDTH="5%"></TD>
+    <TD WIDTH="55%">{% include 'asuzr/orders.html' %}</TD>
+  </TR>
+</table>
+{% include 'asuzr/plan_balance.html' %}
