--- a/templates/asuzr/attendance.html
+++ b/templates/asuzr/attendance.html
@@ -17,13 +17,13 @@
       <TH>Заказы</TH>
       <TH>Стоимость</TH>
     </TR>
-    {% for attend in attend_list %}
+    {% for attend in attend_list %}	
         <TR bgcolor={{attend.day_color}}>
 	  <TD>{{ attend.date_dd_mm_yy}}</TD>
 	  <TD>{{ attend.week_day}}</TD>
 	  <TD>{{ attend.calls }}</TD>
 	  <TD>{{ attend.visits }}</TD>
-	  <TD>{{ attend.order_count}}</TD>
+	  <TD><a href="{% url 'asuzr-main' attend.date.day attend.date.month attend.date.year %}">{{ attend.order_count}}</a></TD>
 	  <TD>{{ attend.orders_price}}</TD>
         </TR>
     {% endfor %}
