--- a/templates/asuzr/orders.html
+++ b/templates/asuzr/orders.html
@@ -5,7 +5,7 @@
     <style></style>
   </head>
   <body>
-  <H1>Заказы</H1>
+  <H1>Заказы на {{ d_date }} </H1>
   <TABLE BORDER WIDTH="100%">
   {% if order_list %}
     <ul>
