Таблица выхода заказов

--- a/templates/asuzr/attend_order.html
+++ b/templates/asuzr/attend_order.html
@@ -2,7 +2,7 @@
   <TR VALIGN=top>
     <TD WIDTH="40%">{% include 'asuzr/attendance.html' %}</TD>
     <TD WIDTH="5%"></TD>
-    <TD WIDTH="55%">{% include 'asuzr/orders.html' %}</TD>
+    <TD WIDTH="55%">{% include 'asuzr/orders_detail.html' %}</TD>
   </TR>
 </table>
 {% include 'asuzr/plan_balance.html' %}
