--- a/templates/asuzr/prod_list.html
+++ b/templates/asuzr/prod_list.html
@@ -1,10 +1,8 @@
-<html>
-  <head>
-    <title>Типы изделий</title>
-    <meta content="">
-    <style></style>
-  </head>
-  <body>
+{% extends "asuzr/base.html" %}
+
+{% block title %}Типы изделий{% endblock %}
+
+{% block page %}
   {% if product_list %}
     <ul>
     {% for prod in product_list %}
@@ -14,5 +12,5 @@
 {% else %}
     <p>Список изделий пуст</p>
 {% endif %}
-  </body>
-</html>
+
+{% endblock %}
