--- a/templates/asuzr/desreport.html
+++ b/templates/asuzr/desreport.html
@@ -1,11 +1,8 @@
-<html>
-  <head>
-    <title></title>
-    <meta content="">
-    <style></style>
-  </head>
-  <body>
-  <H3>Отчет по дизайнерам за {{start_date}} - {{end_date}} </H3>
+{% extends "asuzr/base.html" %}
+
+{% block title %}Отчет по дизайнерам за {{start_date}} - {{end_date}}{% endblock %} 
+
+{% block page %}
   <TABLE BORDER WIDTH="30%">
   {% if des_list %}
    <ul>
@@ -25,5 +22,4 @@
   {% else %}
     <p>Список заказов пуст</p>
   {% endif %}
-  </body>
-</html>
+{% endblock %}
