--- a/templates/asuzr/base.html
+++ b/templates/asuzr/base.html
@@ -8,7 +8,8 @@
      <li><a href={% url 'asuzr-main' 1 5 2015 %}>Таблица посещаемости</a></li>
      <li><a href={% url 'asuzr.views.orders' 0 %}>Таблица выхода заказов</a></li>
      <li><a href={% url 'asuzr.views.orders' 1 %}>Архивная таблица</a></li>
-    </ul>
+     <li><a href={% url 'asuzr.views.desreport' %}>Отчет по дизайнерам</a></li>
+   </ul>
 {% endblock %}
 <H1>{% block title %}Заголовок страницы{% endblock %}</H1> 
 
