Исправлен расчет суммарной стоимости заказов

--- a/templates/asuzr/orders_detail.html
+++ b/templates/asuzr/orders_detail.html
@@ -20,7 +20,7 @@
     {% endfor %}
     <TR>
       <TD> ИТОГО:</TD>
-      <TD>{{sum_price}}</TD>
+      <TD>{{sum_order_price}}</TD>
       <TD></TD>
       <TD></TD>
       <TD></TD>
