Добавлено редактирование полей модели.
Для корректного использования необходимо установить пакет django-inplaceedit:

sudo pip install django-inplaceedit

После установки пакета его необходимо доавить в INSTALLED_APPS в settings.py:

INSTALLED_APPS = (
    'django.contrib.admin',
    'django.contrib.auth',
    'django.contrib.contenttypes',
    'django.contrib.sessions',
    'django.contrib.messages',
    'django.contrib.staticfiles',
    'inplaceeditform',
    'asuzr',
)

--- a/templates/asuzr/base.html
+++ b/templates/asuzr/base.html
@@ -1,6 +1,9 @@
+{% load inplace_edit %}
 <html>
 <head>
   <title>Автоматическая система учета заказов студии мебели Рекорд</title> 
+  <script src="{{ STATIC_URL }}admin/js/jquery.min.js" type="text/javascript"></script>
+  {% inplace_static %}
 </head>
 <body> 
 {% block menu %} 
