--- a/templates/asuzr/attendance.html
+++ b/templates/asuzr/attendance.html
@@ -1,3 +1,4 @@
+{% load inplace_edit %}
   <TABLE BORDER WIDTH="100%">
   {% if attend_list %}
     <ul>
@@ -13,8 +14,8 @@
         <TR bgcolor={{attend.day_color}}>
 	  <TD>{{ attend.date_dd_mm_yy}}</TD>
 	  <TD>{{ attend.week_day}}</TD>
-	  <TD>{{ attend.calls }}</TD>
-	  <TD>{{ attend.visits }}</TD>
+	  <TD>{% inplace_edit "attend.calls" %}</TD>
+	  <TD>{% inplace_edit "attend.visits" %}</TD>
 	  <TD><a href="{% url 'asuzr-main' attend.date.day attend.date.month attend.date.year %}">{{ attend.order_count}}</a></TD>
 	  <TD>{{ attend.orders_price}}</TD>
         </TR>
