--- a/templates/asuzr/desreport.html
+++ b/templates/asuzr/desreport.html
@@ -13,7 +13,7 @@
     </TR>
   {% for des in des_list %}
      <TR> 
-	<TD>{{des.designer__first_name}}</TD> 
+	<TD>{{des.designer__first_name}} {{des.designer__last_name}}</TD> 
 	<TD>{{des.designer__count}}</TD>
 	<TD>{{des.price__sum}}</TD>
      </TR>
