--- a/templates/asuzr/orders_detail.html
+++ b/templates/asuzr/orders_detail.html
@@ -14,7 +14,7 @@
 	  <TD>{{ order.product.name }}</TD>
 	  <TD>{{ order.price }}</TD>
 	  <TD>{{ order.address }}</TD>
-	  <TD>{{ order.designer.first_name }}</TD>
+	  <TD>{{ order.designer.first_name}} {{order.designer.last_name}}</TD>
 	  <TD>{{ order.deadline_dmy }}</TD>
         </TR>
     {% endfor %}
