--- a/templates/asuzr/plan_balance.html
+++ b/templates/asuzr/plan_balance.html
@@ -3,7 +3,7 @@
   <ul>
       <TR>
 	<TD>ПЛАН</TD>
-	<TD>{{ plan.plan }}</TD>
+	<TD>{{ plan }}</TD>
       </TR>
       <TR>
 	<TD>Осталось до выполнения</TD>
