--- a/templates/asuzr/base.html
+++ b/templates/asuzr/base.html
@@ -5,10 +5,22 @@
   <script src="{{ STATIC_URL }}admin/js/jquery.min.js" type="text/javascript"></script>
   {% inplace_static %}
   <link rel="stylesheet" href="{{ STATIC_URL }}django_tables2/themes/paleblue/css/screen.css" />
+  <style>
+    #menu {
+      margin: 0; /* Обнуляем значение отступов */
+      padding: 4px; /* Значение полей */
+    }
+    #menu li {
+      display: inline; /* Отображать как строчный элемент */
+      margin-right: 5px; /* Отступ слева */
+      border: 1px solid #000; /* Рамка вокруг текста */
+      padding: 3px; /* Поля вокруг текста */
+    }
+  </style>
 </head>
 <body> 
 {% block menu %} 
-    <ul id="menu">
+    <ul id="menu" class="hr">
      <li><a href={% url 'asuzr-main' 1 5 2015 %}>Таблица посещаемости</a></li>
      <li><a href={% url 'asuzr.views.orders' 0 %}>Таблица выхода заказов</a></li>
      <li><a href={% url 'asuzr.views.orders' 1 %}>Архивная таблица</a></li>
