--- a/templates/asuzr/base.html
+++ b/templates/asuzr/base.html
@@ -1,4 +1,6 @@
 {% load inplace_edit %}
+{% load filters %}
+
 <html>
 <head>
   <title>Автоматическая система учета заказов студии мебели Рекорд</title> 
@@ -32,9 +34,10 @@
  <li><a href={% url 'asuzr.views.orders' 0 %}>Таблица выхода заказов</a></li>
  <li><a href={% url 'asuzr.views.orders' 1 %}>Архивная таблица</a></li>
  <li><a href={% url 'asuzr.views.desreport' %}>Отчет по дизайнерам</a></li>
+ {% if request.user|has_group:"Администраторы" %}<li><a href={% url 'admin:index' %}>Администрирование</a></li>{% endif %}
 </ul>
 <div id="user">
-{% if request.user.is_authenticated %}Добро пожаловать, {{ request.user.first_name }}
+{% if request.user.is_authenticated %} Добро пожаловать, {{ request.user.first_name }}
 {% else %}<a href="{% url 'django.contrib.auth.views.login' %}">Вход</a>{% endif %}
 <br><a href="{% url 'django.contrib.auth.views.logout' %}">Выход</a>
 </div>
