--- a/templates/asuzr/base.html
+++ b/templates/asuzr/base.html
@@ -34,7 +34,7 @@
  <li><a href={% url 'asuzr.views.orders' 0 %}>Таблица выхода заказов</a></li>
  <li><a href={% url 'asuzr.views.orders' 1 %}>Архивная таблица</a></li>
  <li><a href={% url 'asuzr.views.desreport' %}>Отчет по дизайнерам</a></li>
- {% if request.user|has_group:"Администраторы" %}<li><a href={% url 'admin:index' %}>Администрирование</a></li>{% endif %}
+ {% if request.user.is_staff %}<li><a href={% url 'admin:index' %}>Администрирование</a></li>{% endif %}
 </ul>
 <div id="user">
 {% if request.user.is_authenticated %} Добро пожаловать, {{ request.user.first_name }}
