--- a/templates/asuzr/base.html
+++ b/templates/asuzr/base.html
@@ -3,7 +3,7 @@
 
 <html>
 <head>
-  <title>Автоматическая система учета заказов студии мебели Рекорд</title> 
+  <title>Автоматизированная система учета заказов студии мебели Рекорд</title> 
   <script src="{{ STATIC_URL }}admin/js/jquery.min.js" type="text/javascript"></script>
   {% inplace_static %}
   <link rel="stylesheet" href="{{ STATIC_URL }}django_tables2/themes/paleblue/css/screen.css" />
