--- a/templates/asuzr/weekend_table.html
+++ b/templates/asuzr/weekend_table.html
@@ -24,11 +24,10 @@
     <tbody>
         {% for row in table.page.object_list|default:table.rows %} {# support pagination #}
         {% block table.tbody.row %}
-        {% if row.date.is_weekend %}
-          <tr class="weekend"> {# avoid cycle for Django 1.2-1.6 compatibility #}
-        {% else %}
-          <tr class="{{ forloop.counter|divisibleby:2|yesno:"even,odd" }}"> {# avoid cycle for Django 1.2-1.6 compatibility #}
-        {% endif %}
+          <tr class="
+                    {% if row.date.is_weekend %}weekend{% else %}
+                    {{ forloop.counter|divisibleby:2|yesno:"even,odd" }}{% endif %}
+                    "> {# avoid cycle for Django 1.2-1.6 compatibility #}
             {% for column, cell in row.items %}
                 <td {{ column.attrs.td.as_html }}>{% if column.localize == None %}{{ cell }}{% else %}{% if column.localize %}{{ cell|localize }}{% else %}{{ cell|unlocalize }}{% endif %}{% endif %}</td>
             {% endfor %}
@@ -44,34 +43,18 @@
     </tbody>
     {% endblock table.tbody %}
     {% block table.tfoot %}
-    <tfoot></tfoot>
+    <tfoot>
+    {% if table.summary %}
+       <tr>
+       {% for summary in table.summary %}
+        <td> {{ summary }} </td>
+       {% endfor %}
+       </tr>
+    {% endif %}
+    </tfoot>
     {% endblock table.tfoot %}
     {% endnospaceless %}
 </table>
 {% endblock table %}
 
-{% if table.page %}
-{% with table.page.paginator.count as total %}
-{% with table.page.object_list|length as count %}
-{% block pagination %}
-<ul class="pagination">
-    {% if table.page.has_previous %}
-    {% nospaceless %}{% block pagination.previous %}<li class="previous"><a href="{% querystring table.prefixed_page_field=table.page.previous_page_number %}">{% trans "Previous" %}</a></li>{% endblock pagination.previous %}{% endnospaceless %}
-    {% endif %}
-
-    {% if table.page.has_previous or table.page.has_next %}
-    {% nospaceless %}{% block pagination.current %}<li class="current">{% blocktrans with table.page.number as current and table.paginator.num_pages as total %}Page {{ current }} of {{ total }}{% endblocktrans %}</li>{% endblock pagination.current %}{% endnospaceless %}
-    {% endif %}
-
-    {% if table.page.has_next %}
-    {% nospaceless %}{% block pagination.next %}<li class="next"><a href="{% querystring table.prefixed_page_field=table.page.next_page_number %}">{% trans "Next" %}</a></li>{% endblock pagination.next %}{% endnospaceless %}
-    {% endif %}
-
-    {% nospaceless %}{% block pagination.cardinality %}<li class="cardinality">{% if total != count %}{% blocktrans %}{{ count }} of {{ total }}{% endblocktrans %}{% else %}{{ total }}{% endif %} {% if total == 1 %}{{ table.data.verbose_name }}{% else %}{{ table.data.verbose_name_plural }}{% endif %}</li>{% endblock pagination.cardinality %}{% endnospaceless %}
-</ul>
-{% endblock pagination %}
-{% endwith %}
-{% endwith %}
-</div>
-{% endif %}
 {% endspaceless %}
