Скругленные углы у кнопок
Добавил красивое скругление углов у кнопок

--- a/templates/asuzr/base.html
+++ b/templates/asuzr/base.html
@@ -17,6 +17,7 @@
       display: inline; /* Отображать как строчный элемент */
       margin-right: 5px; /* Отступ слева */
       border: 1px solid #000; /* Рамка вокруг текста */
+      border-radius: 4px;
       padding: 3px; /* Поля вокруг текста */
     }
     #user {
