--- a/templates/asuzr/base.html
+++ b/templates/asuzr/base.html
@@ -34,6 +34,7 @@
  <li><a href={% url 'asuzr.views.orders' 0 %}>Таблица выхода заказов</a></li>
  <li><a href={% url 'asuzr.views.orders' 1 %}>Архивная таблица</a></li>
  <li><a href={% url 'asuzr.views.desreport' %}>Отчет по дизайнерам</a></li>
+ <li><a href={% url 'asuzr.views.prod_plan_view' %}>Производственный план</a></li>
  {% if request.user.is_staff %}<li><a href={% url 'admin:index' %}>Администрирование</a></li>{% endif %}
 </ul>
 <div id="user">
