Шаблон для трех таблиц на странице
Сделал шаблон для трех таблиц на странице

--- a/templates/asuzr/base.html
+++ b/templates/asuzr/base.html
@@ -29,6 +29,9 @@
     table.paleblue tr.weekend {
       background-color: #FFE4E1
     }
+    .inline {
+      display: inline-block;
+    }
  </style>
 </head>
 <body>
