--- a/templates/asuzr/base.html
+++ b/templates/asuzr/base.html
@@ -34,6 +34,9 @@
       display: inline-block;
       vertical-align: top;
     }
+    .gray {
+      color: lightgray;
+    }
  </style>
 </head>
 <body>
