Реализовано добавление заказов

--- a/templates/asuzr/base.html
+++ b/templates/asuzr/base.html
@@ -72,9 +72,9 @@
 
 
 {% block controls %}
-{% if form %}
+{% if dateform %}
 <form  id='dateform' method="get">
-    {{ form }}
+    {{ dateform }}
     <input type="submit" value="OK" />
 </form>
 {% endif %}
