--- a/templates/asuzr/table2.html
+++ b/templates/asuzr/table2.html
@@ -3,8 +3,8 @@
 {% load render_table from django_tables2 %}
 
 {% block page %}
-  <div class="inline"><div><h3>{{ table1.verbose_name }}</h3></div>{% render_table table1 %}</div>
-  <div class="inline"><div><h3>{{ table2.verbose_name }}</h3></div>{% render_table table2 %}</div>
+  <div class="inline" style="width:38%;"><div><h3>{{ table1.verbose_name }}</h3></div>{% render_table table1 %}</div>
+  <div class="inline" style="width:20%;"><div><h3>{{ table2.verbose_name }}</h3></div>{% render_table table2 %}</div>
   {% if order_form %}
   <form action="{% url 'add-order' %}" method="POST" >
   {% csrf_token %}
