--- a/templates/asuzr/base.html
+++ b/templates/asuzr/base.html
@@ -8,6 +8,22 @@
   {% inplace_static %}
   <link rel="stylesheet" href="{{ STATIC_URL }}django_tables2/themes/paleblue/css/screen.css" />
   <link rel="stylesheet" href="{{ STATIC_URL }}admin/css/base.css" />
+  <script type="text/javascript" src="/static/admin/js/admin/RelatedObjectLookups.js">
+
+	  function showAddAnotherPopup(triggeringLink) {
+	      var name = triggeringLink.id.replace(/^add_/, '');
+	      name = id_to_windowname(name);
+	      href = triggeringLink.href
+	      if (href.indexOf('?') == -1) {
+		  href += '?_popup=1';
+	      } else {
+		  href  += '&_popup=1';
+	      }
+	      var win = window.open(href, name, 'height=500,width=800,resizable=yes,scrollbars=yes');
+	      win.focus();
+	      return false;
+	      }
+  </script>
   <style>
     #menu {
       margin: 0; /* Обнуляем значение отступов */
