--- a/templates/asuzr/base.html
+++ b/templates/asuzr/base.html
@@ -57,6 +57,9 @@
       margin-left: 12px;
       margin-top: 6px;
     }
+    table.paleblue td.align-right {
+      text-align: right;
+    }
     body {
       background: #F5F5F5
     }
