--- a/templates/asuzr/table_with_form.html
+++ b/templates/asuzr/table_with_form.html
@@ -32,7 +32,7 @@
 	    {% endfor %}  
 	  </tr>
 	  <tr>
-		  <td class="align-right" colspan="{{ add_form.fields|length }}"><input type="submit" value="{{ add_form.submit_text }}"></td>
+		  <td class="align-right" colspan="{{ add_form.fields|length }}"><input type="submit" class="default" value="{{ add_form.submit_text }}"></td>
 	  </tr>
 	</form>
         {% endif %}
