промежуточные результаты (добавление строк в таблице Производственный план)

--- a/templates/asuzr/base.html
+++ b/templates/asuzr/base.html
@@ -24,6 +24,11 @@
 	      return false;
 	      }
   </script>
+  {% if dateform %}
+    <script type="text/javascript" src="/admin/jsi18n/"></script>
+    <script type="text/javascript" src="/static/admin/js/core.js"></script>
+    {{ dateform.media }}
+  {% endif %}
   <style>
     #menu {
       margin: 0; /* Обнуляем значение отступов */
